syntax = "proto3";

package rideshareframes;
option csharp_namespace = "RideShareFrames";

message GeoLocation 
{
    double Latitude = 1;
    double Longitude = 2;
}

message RideTopic
{
    string FromGeohash = 1;
    string ToGeohash = 2;
    int64 PickupAfter = 3;
    int64 PickupBefore = 4;
    double Distance = 5;
}

message ConnectionReply
{
    string PublicKey = 1;
    repeated string Relays = 2;
    string Secret = 3;
    GeoLocation Location = 4;
    string Message = 5;
}

enum RideState
{
    Started = 0;
    DriverGoingForRider = 1;
    DriverWaitingForRider = 2;
    RiderPickedUp = 3;
    DriverGoingWithRider = 4;
    Completed = 5;
    Disputed = 6;
    Failed = 7;
    Cancelled = 8;
}

message LocationFrame
{
    bytes SignedRequestPayloadId = 1;
    bytes ReplierCertificateId = 2;
    string SecurityCenterUri = 3;
    string Secret = 4;
    GeoLocation FromLocation = 5;
    GeoLocation ToLocation = 6;
    string FromAddress = 7;
    string ToAddress = 8;
    GeoLocation Location = 9;
    string Message = 10;
    RideState RideStatus = 11;
}
